Fix some layout issues in archival summary

--- a/resources/private/common-html/css/main.css
+++ b/resources/private/common-html/css/main.css
@@ -5810,7 +5810,6 @@ ul.attachments-list li.mandatory-attachments {
 /* line 16, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-type-container {
   *zoom: 1;
-  height: 28px;
 }
 /* line 22, ../sass/main.scss */
 .archival-summary-table .attachment-type-container:before, .archival-summary-table .attachment-type-container:after {
@@ -5821,17 +5820,18 @@ ul.attachments-list li.mandatory-attachments {
 .archival-summary-table .attachment-type-container:after {
   clear: both;
 }
-/* line 19, ../sass/partials/_archival-summary.scss */
+/* line 18, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-type-container .group-label, .archival-summary-table .attachment-type-container .type-id {
   float: left;
   width: 50%;
 }
-/* line 24, ../sass/partials/_archival-summary.scss */
+/* line 23, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .column-header-row {
   background-color: #dddddd;
   font-size: 12px;
   font-weight: 700;
   letter-spacing: 0.125em;
+  padding: 6px 0;
 }
 /* line 30, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row {
@@ -5849,13 +5849,24 @@ ul.attachments-list li.mandatory-attachments {
 }
 /* line 40, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .attachment-row-top {
+  *zoom: 1;
   cursor: pointer;
+  padding: 6px 0 5px 0;
 }
-/* line 42, ../sass/partials/_archival-summary.scss */
+/* line 22, ../sass/main.scss */
+.archival-summary-table .attachment-row .attachment-row-top:before, .archival-summary-table .attachment-row .attachment-row-top:after {
+  content: "";
+  display: table;
+}
+/* line 26, ../sass/main.scss */
+.archival-summary-table .attachment-row .attachment-row-top:after {
+  clear: both;
+}
+/* line 44, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .attachment-row-top div {
   vertical-align: top;
 }
-/* line 46, ../sass/partials/_archival-summary.scss */
+/* line 48, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls {
   *zoom: 1;
 }
@@ -5868,21 +5879,21 @@ ul.attachments-list li.mandatory-attachments {
 .archival-summary-table .attachment-row .additional-controls:after {
   clear: both;
 }
-/* line 48, ../sass/partials/_archival-summary.scss */
+/* line 50, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .left {
   padding: 6px 16px 15px 16px;
   width: 50%;
 }
-/* line 52, ../sass/partials/_archival-summary.scss */
+/* line 54, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container {
   background-color: #f5f5f4;
   border: 1px solid #4f4f4f;
 }
-/* line 53, ../sass/partials/_archival-summary.scss */
+/* line 55, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container:first-child {
   margin-bottom: 15px;
 }
-/* line 58, ../sass/partials/_archival-summary.scss */
+/* line 60, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container .header {
   margin: 0 0 15px 0;
   font-size: 16px;
@@ -5890,78 +5901,78 @@ ul.attachments-list li.mandatory-attachments {
   background-color: #4f4f4f;
   padding: 10px 15px;
 }
-/* line 65, ../sass/partials/_archival-summary.scss */
+/* line 67, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container .contents {
   padding: 0 15px 15px 15px;
 }
-/* line 68, ../sass/partials/_archival-summary.scss */
+/* line 70, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container .preview-image {
   text-align: center;
 }
-/* line 70, ../sass/partials/_archival-summary.scss */
+/* line 72, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container .preview-image img {
   border: 1px solid #4f4f4f;
   max-width: 100%;
 }
-/* line 75, ../sass/partials/_archival-summary.scss */
+/* line 77, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .additional-data-container .attachment-type-select {
   margin: 0;
   width: 100%;
 }
-/* line 80, ../sass/partials/_archival-summary.scss */
+/* line 82, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .metadata-editor-container {
   margin: 0;
   border: 1px solid #4f4f4f;
 }
-/* line 83, ../sass/partials/_archival-summary.scss */
+/* line 85, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .metadata-editor-container .editor-header {
   min-height: 0;
   padding: 10px 15px;
   font-size: 16px;
 }
-/* line 87, ../sass/partials/_archival-summary.scss */
+/* line 89, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row .additional-controls .metadata-editor-container .editor-header i {
   font-size: 18px;
 }
-/* line 94, ../sass/partials/_archival-summary.scss */
+/* line 96, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-type {
   margin-right: 545px;
-  padding: 6px 16px;
+  padding: 0 6px;
 }
-/* line 98, ../sass/partials/_archival-summary.scss */
+/* line 100, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .small-columns {
   width: 545px;
   float: right;
 }
-/* line 101, ../sass/partials/_archival-summary.scss */
+/* line 103, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .small-columns div {
   display: inline-block;
-  padding: 6px 16px;
+  padding: 0 6px;
 }
-/* line 106, ../sass/partials/_archival-summary.scss */
+/* line 108, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .retention-period {
   width: 160px;
 }
-/* line 109, ../sass/partials/_archival-summary.scss */
+/* line 111, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .personal-data {
   width: 170px;
 }
-/* line 112, ../sass/partials/_archival-summary.scss */
+/* line 114, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .will-publish {
   width: 111px;
   text-align: right;
 }
-/* line 116, ../sass/partials/_archival-summary.scss */
+/* line 118, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .stamped {
   width: 92px;
   text-align: center;
 }
-/* line 120, ../sass/partials/_archival-summary.scss */
+/* line 122, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-group-header {
   margin: 25px 0 15px;
   height: auto;
 }
-/* line 125, ../sass/partials/_archival-summary.scss */
+/* line 127, ../sass/partials/_archival-summary.scss */
 .archival-summary-table .metadata-editor-container .editor-header {
   border-collapse: separate;
 }
